# CMakeList.txt : CMake project for LearnDataStruct, include source and define
# project specific logic here.
#

add_subdirectory ("arrayList_01")
add_subdirectory ("arrayList_02")
add_subdirectory ("arrayList_03")
add_subdirectory ("LeetCode_070")
add_subdirectory ("LeetCode_001")
add_subdirectory ("LeetCode_088")
add_subdirectory ("LeetCode_283")
add_subdirectory ("LeetCode_448")
add_subdirectory ("LeetCode_021")
add_subdirectory ("LeetCode_083")
add_subdirectory ("LeetCode_141")
add_subdirectory ("LeetCode_142")
add_subdirectory ("LeetCode_160")

# TODO: Add tests and install targets if needed.
