# CMakeList.txt : CMake project for LearnDataStruct, include source and define
# project specific logic here.
#

add_subdirectory ("arrayList_01")
add_subdirectory ("arrayList_02")
add_subdirectory ("arrayList_03")
add_subdirectory ("LeetCode_070")
add_subdirectory ("LeetCode_001")
add_subdirectory ("LeetCode_088")
add_subdirectory ("LeetCode_283")
add_subdirectory ("LeetCode_448")
add_subdirectory ("LeetCode_021")
add_subdirectory ("LeetCode_083")
add_subdirectory ("LeetCode_141")
add_subdirectory ("LeetCode_142")
add_subdirectory ("LeetCode_160")
add_subdirectory ("LeetCode_206")
add_subdirectory ("LeetCode_234")
add_subdirectory ("LeetCode_876")
add_subdirectory ("offer_022")
add_subdirectory ("LeetCode_232")
add_subdirectory ("LeetCode_394")
add_subdirectory ("LeetCode_094")
add_subdirectory ("LeetCode_144")
add_subdirectory ("LeetCode_145")
add_subdirectory ("LeetCode_101")
add_subdirectory ("LeetCode_104")
add_subdirectory ("LeetCode_110")
add_subdirectory ("LeetCode_226")
add_subdirectory ("LeetCode_912")
add_subdirectory ("LeetCode_704") 
add_subdirectory ("offer_000") 
add_subdirectory ("LeetCode_136") 
add_subdirectory ("LeetCode_338") 
add_subdirectory ("LeetCode_461") 

# TODO: Add tests and install targets if needed.
